Simplify chart config, display day ticks

--- a/speeds/templates/index.html
+++ b/speeds/templates/index.html
@@ -52,13 +52,9 @@
                   xAxes: [{
                       display: true,
 		      type: 'time',
-                      scaleLabel: {
-                          display: true,
-                          labelString: 'Time'
+		      time: {
+                          unit: 'day'
                       },
-                      ticks: {
-                          source: 'auto'
-                      }
                   }],
                   yAxes: [{
                       display: true,
