--- a/speeds/templates/index.html
+++ b/speeds/templates/index.html
@@ -41,7 +41,7 @@
 	      responsive: true,
               title: {
                   display: true,
-                  text: 'Speeds'
+                  text: 'Speeds{{ " to " + target if target else "" }}'
               },
               tooltips: {
 		  callbacks: {
